add main structure, save pictures

--- a/index.html
+++ b/index.html
@@ -8,7 +8,47 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+        
+    <section>
+        <img class="hero" src="images/happy-traveler.svg" alt="Happy Travels">
+        <h1>Happy Travels</h1>
+        <p>Specializujeme se na exotické destinace a výjimečné zážitkové pobyty. S námi se nikdy nudit nebudete. Ať už chcete zažít pořádný adrenalin nebo se jen opalovat na pláži.</p>
+        <a href="#" class="button">Chci dobrodružství</a>
+        <a href="#" class="button">Raději pohodu na pláži</a>
+    </section>
 
-    
+    <section>
+        <h2>Služby naší cestovní kanceláře</h2>
+        <p>Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou destinaci a zajistíme pro vás vše od ubtování až po letenky.</p>
+        <div>
+            <div>
+                <img class="icon" src="images/map-icon.svg" alt="mapa">
+                <a href="#" class="menu">Naplánujeme zájezdy a výlety do celého světa.</a></div>
+            <div>
+                <img class="icon" src="images/cactus-icon.svg" alt="kaktus">
+                <a href="#" class="menu">Zajistíme exotické destinace a zážitkové pobyty.</a></div>
+            <div>
+                <img class="icon" src="images/plane-icon.svg" alt="letadlo">
+                <a href="#" class="menu">Seženeme nejlevnější letenky v daném termínu.</a></div>
+        </div>
+
+    </section>
+
+    <section>
+        <h2>Služby našich delegátů na místě</h2>
+        <p>Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně. Doporučí vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku nebo auta.</p>
+        <div>
+            <div>
+                <img class="icon" src="images/palm-icon.svg" alt="palma">
+                <a href="#" class="menu">Doporučíme ty nejhezčí destinace pro výlety.</a></div>
+            <div>
+                <img class="icon" src="images/umbrella-icon.svg" alt="destnik">
+                <a href="#" class="menu">Objednáme slunečníky a plážová lehátka.</a></div>
+            <div>
+                <img class="icon" src="images/rv-icon.svg" alt="karavan">
+                <a href="#" class="menu">Pronajmeme karavan nebo vůz na cestování.</a></div>
+        </div>
+    </section>
+
 </body>
 </html>
