--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
         
-    <section>
-        <img class="hero" src="images/happy-traveler.svg" alt="Happy Travels">
+    <section class="heroSection">
+        <img class="heroImage" src="images/happy-traveler.svg" alt="Happy Travels">
         <h1>Happy Travels</h1>
         <p>Specializujeme se na exotické destinace a výjimečné zážitkové pobyty. S námi se nikdy nudit nebudete. Ať už chcete zažít pořádný adrenalin nebo se jen opalovat na pláži.</p>
         <a href="#" class="button">Chci dobrodružství</a>
