add text properties

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
         
-    <section class="heroSection">
+    <section>
         <img class="heroImage" src="images/happy-traveler.svg" alt="Happy Travels">
         <h1>Happy Travels</h1>
         <p>Specializujeme se na exotické destinace a výjimečné zážitkové pobyty. S námi se nikdy nudit nebudete. Ať už chcete zažít pořádný adrenalin nebo se jen opalovat na pláži.</p>
