add logo part, save image logo cara

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <section>
         <img class="heroImage" src="images/happy-traveler.svg" alt="Happy Travels">
         <h1>Happy Travels</h1>
+        <img class="logoCara" src="images/cara.svg" alt="cara">
         <p>Specializujeme se na exotické destinace a výjimečné zážitkové pobyty. S námi se nikdy nudit nebudete. Ať už chcete zažít pořádný adrenalin nebo se jen opalovat na pláži.</p>
         <a href="#" class="button">Chci dobrodružství</a>
         <a href="#" class="button">Raději pohodu na pláži</a>
