--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
         
-    <section>
+    <section class="hero">
         <img class="heroImage" src="images/happy-traveler.svg" alt="Happy Travels">
         <h1>Happy Travels</h1>
         <img class="logoCara" src="images/cara.svg" alt="cara">
