add properties section hero

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <h1>Happy Travels</h1>
         <img class="logoCara" src="images/cara.svg" alt="cara">
         <p>Specializujeme se na exotické destinace a výjimečné zážitkové pobyty. S námi se nikdy nudit nebudete. Ať už chcete zažít pořádný adrenalin nebo se jen opalovat na pláži.</p>
-        <a href="#" class="button">Chci dobrodružství</a>
-        <a href="#" class="button">Raději pohodu na pláži</a>
+            <button class="button">Chci dobrodružství</button>
+            <button class="button secondary">Raději pohodu na pláži</button>
     </section>
 
     <section>
@@ -35,7 +35,6 @@
                 <img class="icon" src="images/plane-icon.svg" alt="letadlo">
                 <a href="#" class="menu">Seženeme nejlevnější letenky v daném termínu.</a></div>
         </div>
-
     </section>
 
     <section>
