add class to sections

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button class="button secondary">Raději pohodu na pláži</button>
     </section>
 
-    <section>
+    <section class="sluzbyKancelare">
         <h2>Služby naší cestovní kanceláře</h2>
         <p>Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou destinaci a zajistíme pro vás vše od ubtování až po letenky.</p>
         <div>
@@ -37,7 +37,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="sluzbyDelegatu">
         <h2>Služby našich delegátů na místě</h2>
         <p>Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně. Doporučí vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku nebo auta.</p>
         <div>
