add properties to class menu, style section sluzbyKancelare

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
         <h2>Služby naší cestovní kanceláře</h2>
         <p>Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou destinaci a zajistíme pro vás vše od ubtování až po letenky.</p>
         <div>
-            <div>
+            <div class="menu">
                 <img class="icon" src="images/map-icon.svg" alt="mapa">
-                <a href="#" class="menu">Naplánujeme zájezdy a výlety do celého světa.</a></div>
-            <div>
+                <a href="#" >Naplánujeme zájezdy a výlety do celého světa.</a></div>
+            <div class="menu">
                 <img class="icon" src="images/cactus-icon.svg" alt="kaktus">
-                <a href="#" class="menu">Zajistíme exotické destinace a zážitkové pobyty.</a></div>
-            <div>
+                <a href="#" >Zajistíme exotické destinace a zážitkové pobyty.</a></div>
+            <div class="menu">
                 <img class="icon" src="images/plane-icon.svg" alt="letadlo">
-                <a href="#" class="menu">Seženeme nejlevnější letenky v daném termínu.</a></div>
+                <a href="#">Seženeme nejlevnější letenky v daném termínu.</a></div>
         </div>
     </section>
 
