style section sluzbyDelegatu, edit style <p>

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
         <h2>Služby našich delegátů na místě</h2>
         <p>Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně. Doporučí vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku nebo auta.</p>
         <div>
-            <div>
+            <div class="menu">
                 <img class="icon" src="images/palm-icon.svg" alt="palma">
-                <a href="#" class="menu">Doporučíme ty nejhezčí destinace pro výlety.</a></div>
-            <div>
+                <a href="#">Doporučíme ty nejhezčí destinace pro výlety.</a></div>
+            <div class="menu">
                 <img class="icon" src="images/umbrella-icon.svg" alt="destnik">
-                <a href="#" class="menu">Objednáme slunečníky a plážová lehátka.</a></div>
-            <div>
+                <a href="#" >Objednáme slunečníky a plážová lehátka.</a></div>
+            <div class="menu">
                 <img class="icon" src="images/rv-icon.svg" alt="karavan">
-                <a href="#" class="menu">Pronajmeme karavan nebo vůz na cestování.</a></div>
+                <a href="#">Pronajmeme karavan nebo vůz na cestování.</a></div>
         </div>
     </section>
 
