style screen minwidth 640

--- a/index.html
+++ b/index.html
@@ -23,33 +23,44 @@
 
     <section class="sluzbyKancelare">
         <h2>Služby naší cestovní kanceláře</h2>
-        <p>Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou destinaci a zajistíme pro vás vše od ubtování až po letenky.</p>
-        <div>
+        <div class="text">
+            <p>Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou destinaci a zajistíme pro vás vše od ubtování až po letenky.</p>
+        </div>
+        <div class="kontejnerMenu">
             <div class="menu">
                 <img class="icon" src="images/map-icon.svg" alt="mapa">
-                <a href="#" >Naplánujeme zájezdy a výlety do celého světa.</a></div>
+                <a href="#" class="pokus" >Naplánujeme zájezdy a výlety do celého světa.</a>
+            </div>
             <div class="menu">
                 <img class="icon" src="images/cactus-icon.svg" alt="kaktus">
-                <a href="#" >Zajistíme exotické destinace a zážitkové pobyty.</a></div>
+                <a href="#" >Zajistíme exotické destinace a zážitkové pobyty.</a>
+            </div>
             <div class="menu">
                 <img class="icon" src="images/plane-icon.svg" alt="letadlo">
-                <a href="#">Seženeme nejlevnější letenky v daném termínu.</a></div>
+                <a href="#">Seženeme nejlevnější letenky v daném termínu.</a>
+            </div>
         </div>
+
     </section>
 
     <section class="sluzbyDelegatu">
         <h2>Služby našich delegátů na místě</h2>
-        <p>Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně. Doporučí vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku nebo auta.</p>
-        <div>
+        <div class="text">
+            <p>Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně. Doporučí vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku nebo auta.</p>
+        </div>
+        <div class="kontejnerMenu">
             <div class="menu">
                 <img class="icon" src="images/palm-icon.svg" alt="palma">
-                <a href="#">Doporučíme ty nejhezčí destinace pro výlety.</a></div>
+                <a href="#">Doporučíme ty nejhezčí destinace pro výlety.</a>
+            </div>
             <div class="menu">
                 <img class="icon" src="images/umbrella-icon.svg" alt="destnik">
-                <a href="#" >Objednáme slunečníky a plážová lehátka.</a></div>
+                <a href="#" >Objednáme slunečníky a plážová lehátka.</a>
+            </div>
             <div class="menu">
                 <img class="icon" src="images/rv-icon.svg" alt="karavan">
-                <a href="#">Pronajmeme karavan nebo vůz na cestování.</a></div>
+                <a href="#">Pronajmeme karavan nebo vůz na cestování.</a>
+            </div>
         </div>
     </section>
 
