style screen min width 1100px

--- a/index.html
+++ b/index.html
@@ -12,57 +12,63 @@
 </head>
 <body>
         
-    <section class="hero">
-        <img class="heroImage" src="images/happy-traveler.svg" alt="Happy Travels">
-        <h1>Happy Travels</h1>
-        <img class="logoCara" src="images/cara.svg" alt="cara">
-        <p>Specializujeme se na exotické destinace a výjimečné zážitkové pobyty. S námi se nikdy nudit nebudete. Ať už chcete zažít pořádný adrenalin nebo se jen opalovat na pláži.</p>
-            <button class="button">Chci dobrodružství</button>
-            <button class="button secondary">Raději pohodu na pláži</button>
-    </section>
+        <section class="hero">
+                <img class="heroImage" src="images/happy-traveler.svg" alt="Happy Travels">
+                <div class="heroText">
+                    <h1>Happy Travels</h1>
+                    <img class="logoCara" src="images/cara.svg" alt="cara">
+                    <p>Specializujeme se na exotické destinace a výjimečné zážitkové pobyty. S námi se nikdy nudit nebudete. Ať už chcete zažít pořádný adrenalin nebo se jen opalovat na pláži.</p>
+                    <button class="button">Chci dobrodružství</button>
+                    <button class="button secondary">Raději pohodu na pláži</button>
+                </div>
+        </section>
 
-    <section class="sluzbyKancelare">
-        <h2>Služby naší cestovní kanceláře</h2>
-        <div class="text">
-            <p>Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou destinaci a zajistíme pro vás vše od ubtování až po letenky.</p>
-        </div>
-        <div class="kontejnerMenu">
-            <div class="menu">
-                <img class="icon" src="images/map-icon.svg" alt="mapa">
-                <a href="#" class="pokus" >Naplánujeme zájezdy a výlety do celého světa.</a>
+        <section class="sluzby kancelare">
+            <div class="kontejnerText prvni">
+                <h2>Služby naší cestovní kanceláře</h2>
+                <div class="text">
+                    <p>Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou destinaci a zajistíme pro vás vše od ubtování až po letenky.</p>
+                </div>
             </div>
-            <div class="menu">
-                <img class="icon" src="images/cactus-icon.svg" alt="kaktus">
-                <a href="#" >Zajistíme exotické destinace a zážitkové pobyty.</a>
+            <div class="kontejnerMenu prvni">
+                <div class="menu">
+                    <img class="icon" src="images/map-icon.svg" alt="mapa">
+                    <a href="#" class="pokus" >Naplánujeme zájezdy a výlety do celého světa.</a>
+                </div>
+                <div class="menu">
+                    <img class="icon" src="images/cactus-icon.svg" alt="kaktus">
+                    <a href="#" >Zajistíme exotické destinace a zážitkové pobyty.</a>
+                </div>
+                <div class="menu">
+                    <img class="icon" src="images/plane-icon.svg" alt="letadlo">
+                    <a href="#">Seženeme nejlevnější letenky v daném termínu.</a>
+                </div>
             </div>
-            <div class="menu">
-                <img class="icon" src="images/plane-icon.svg" alt="letadlo">
-                <a href="#">Seženeme nejlevnější letenky v daném termínu.</a>
-            </div>
-        </div>
 
-    </section>
+        </section>
 
-    <section class="sluzbyDelegatu">
-        <h2>Služby našich delegátů na místě</h2>
-        <div class="text">
-            <p>Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně. Doporučí vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku nebo auta.</p>
-        </div>
-        <div class="kontejnerMenu">
-            <div class="menu">
-                <img class="icon" src="images/palm-icon.svg" alt="palma">
-                <a href="#">Doporučíme ty nejhezčí destinace pro výlety.</a>
+        <section class="sluzby delegatu">
+            <div class="kontejnerText druhy">
+                <h2>Služby našich delegátů na místě</h2>
+                <div class="text">
+                    <p>Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně. Doporučí vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku nebo auta.</p>
+                </div>
+             </div>
+            <div class="kontejnerMenu druhy">
+                <div class="menu">
+                    <img class="icon" src="images/palm-icon.svg" alt="palma">
+                    <a href="#">Doporučíme ty nejhezčí destinace pro výlety.</a>
+                </div>
+                <div class="menu">
+                    <img class="icon" src="images/umbrella-icon.svg" alt="destnik">
+                    <a href="#" >Objednáme slunečníky a plážová lehátka.</a>
+                </div>
+                <div class="menu">
+                    <img class="icon" src="images/rv-icon.svg" alt="karavan">
+                    <a href="#">Pronajmeme karavan nebo vůz na cestování.</a>
+                </div>
             </div>
-            <div class="menu">
-                <img class="icon" src="images/umbrella-icon.svg" alt="destnik">
-                <a href="#" >Objednáme slunečníky a plážová lehátka.</a>
-            </div>
-            <div class="menu">
-                <img class="icon" src="images/rv-icon.svg" alt="karavan">
-                <a href="#">Pronajmeme karavan nebo vůz na cestování.</a>
-            </div>
-        </div>
-    </section>
-
+        </section>
+  
 </body>
 </html>
