edit HTML delete p

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <div class="kontejnerText prvni">
                 <h2>Služby naší cestovní kanceláře</h2>
                 <div class="text">
-                    <p>Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou destinaci a zajistíme pro vás vše od ubtování až po letenky.</p>
+                    Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou destinaci a zajistíme pro vás vše od ubtování až po letenky.
                 </div>
             </div>
             <div class="kontejnerMenu prvni">
                 <div class="menu">
                     <img class="icon" src="images/map-icon.svg" alt="mapa">
-                    <a href="#" class="pokus" >Naplánujeme zájezdy a výlety do celého světa.</a>
+                    <a href="#">Naplánujeme zájezdy a výlety do celého světa.</a>
                 </div>
                 <div class="menu">
                     <img class="icon" src="images/cactus-icon.svg" alt="kaktus">
@@ -51,7 +51,7 @@
             <div class="kontejnerText druhy">
                 <h2>Služby našich delegátů na místě</h2>
                 <div class="text">
-                    <p>Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně. Doporučí vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku nebo auta.</p>
+                    Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně. Doporučí vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku nebo auta.
                 </div>
              </div>
             <div class="kontejnerMenu druhy">
